--- a/src/app/components/menu-login/menu-login.component.html
+++ b/src/app/components/menu-login/menu-login.component.html
@@ -25,7 +25,7 @@
                       <a class="nav-link texto separador" routerLink="/" >Cerrar Session</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link texto" >Hola Cristhian</a>
+                      <a class="nav-link texto" >Hola {{nombre | titlecase}}</a>
                     </li>
                   </ul>
             </div>
