--- a/src/app/pages/registrarse/registrarse.component.html
+++ b/src/app/pages/registrarse/registrarse.component.html
@@ -30,7 +30,7 @@
     
                 <div class="mb-3">
                     <label class="form-label">Rol:</label>
-                    <select class="form-select ">
+                    <select class="form-select " formControlName="rolControl">
                         <option value="1">Admin</option>
                         <option value="2">Usuario</option>
                     </select>
