--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,58 +12,20 @@
 
         <div class="lista">
 
-            <div class="producto">
+            <div class="producto" *ngFor="let i of productos">
                 <div class="card">
                     <div class="card-header">
-                     <h3 class="titulo-producto">Fruta de temporada </h3> 
+                     <h3 class="titulo-producto">{{i.nombreControl}}</h3> 
                     </div>
                     <div class="card-body">
-                        <img class="imagen-producto" src="https://www.nestle.com.pe/sites/g/files/pydnoa276/files/Dummie_Nesquik.jpg" >
-                      <p class="card-text precio">S/.120.00</p>
+                        <img class="imagen-producto" src={{i.imagenControl}} >
+                      <p class="card-text precio">S/.{{i.costoControl }}.00</p>
                       <button type="button" class="registrar btn  d-flex mx-auto mb-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Agregar a Carrito</button>
                       <button type="button" class="registrar btn  d-flex mx-auto" (click)="ver()">Ver más</button>
                     </div>
                   </div>
             </div>
-            <div class="producto">
-                <div class="card">
-                    <div class="card-header">
-                     <h3 class="titulo-producto">Fruta de temporada </h3> 
-                    </div>
-                    <div class="card-body">
-                        <img class="imagen-producto" src="https://www.nestle.com.pe/sites/g/files/pydnoa276/files/Dummie_Nesquik.jpg" >
-                      <p class="card-text precio">S/.120.00</p>
-                      <button type="button" class="registrar btn  d-flex mx-auto mb-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Agregar a Carrito</button>
-                      <button type="button" class="registrar btn  d-flex mx-auto" (click)="ver()">Ver más</button>
-                    </div>
-                  </div>
-            </div>
-            <div class="producto">
-                <div class="card">
-                    <div class="card-header">
-                     <h3 class="titulo-producto">Fruta de temporada </h3> 
-                    </div>
-                    <div class="card-body">
-                        <img class="imagen-producto" src="https://www.nestle.com.pe/sites/g/files/pydnoa276/files/Dummie_Nesquik.jpg" >
-                      <p class="card-text precio">S/.120.00</p>
-                      <button type="button" class="registrar btn  d-flex mx-auto mb-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Agregar a Carrito</button>
-                      <button type="button" class="registrar btn  d-flex mx-auto" (click)="ver()">Ver más</button>
-                    </div>
-                  </div>
-            </div>
-            <div class="producto">
-                <div class="card">
-                    <div class="card-header">
-                     <h3 class="titulo-producto">Fruta de temporada </h3> 
-                    </div>
-                    <div class="card-body">
-                        <img class="imagen-producto" src="https://www.nestle.com.pe/sites/g/files/pydnoa276/files/Dummie_Nesquik.jpg" >
-                      <p class="card-text precio">S/.120.00</p>
-                      <button type="button" class="registrar btn  d-flex mx-auto mb-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Agregar a Carrito</button>
-                      <button type="button" class="registrar btn  d-flex mx-auto" (click)="ver()">Ver más</button>
-                    </div>
-                  </div>
-            </div>
+            
             
             <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
