--- a/src/app/pages/lista/lista.component.html
+++ b/src/app/pages/lista/lista.component.html
@@ -18,38 +18,16 @@
               </tr>
             </thead>
             <tbody>
-                <tr>
-                  <td class="item">1</td>
-                  <td class="item" >Frutas de temporada</td>
-                  <td class="item" >120</td>
-                  <td class="item" >80</td>
-                  <td class="item" >160</td>
-                  <td><button type="button" class="btn boton btn-danger px-4">Borrar</button></td>
+                <tr *ngFor="let i of productos">
+                  <td class="item">-</td>
+                  <td class="item" >{{i.nombreControl}}</td>
+                  <td class="item" >{{i.costoControl}}</td>
+                  <td class="item" >{{i.ofertaControl}}</td>
+                  <td class="item" >{{i.costoControl}}</td>
+                  <td><button type="button" class="btn boton btn-danger px-4" (click)="onClickDelete(i)">Borrar</button></td>
                 </tr>
-                <tr>
-                  <td class="item">1</td>
-                  <td class="item" >Frutas de temporada</td>
-                  <td class="item" >120</td>
-                  <td class="item" >80</td>
-                  <td class="item" >160</td>
-                  <td><button type="button" class="btn boton btn-danger px-4">Borrar</button></td>
-                </tr>
-                <tr>
-                  <td class="item">1</td>
-                  <td class="item" >Frutas de temporada</td>
-                  <td class="item" >120</td>
-                  <td class="item" >80</td>
-                  <td class="item" >160</td>
-                  <td><button type="button" class="btn boton btn-danger px-4">Borrar</button></td>
-                </tr>
-                <tr>
-                  <td class="item">1</td>
-                  <td class="item" >Frutas de temporada</td>
-                  <td class="item" >120</td>
-                  <td class="item" >80</td>
-                  <td class="item" >160</td>
-                  <td><button type="button" class="btn boton btn-danger px-4">Borrar</button></td>
-                </tr>
+                
+                
             </tbody>
           </table>
 
