--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -8,157 +8,14 @@
 
         <div class="lista">
 
-            <div class="producto">
+            <div class="producto" *ngFor="let i of productos">
                 <div class="card">
                     <div class="card-header">
-                     <h3 class="titulo-producto">Fruta de temporada </h3> 
+                     <h3 class="titulo-producto">{{i.nombreControl}} </h3> 
                     </div>
                     <div class="card-body">
-                        <img src="https://www.nestle.com.pe/sites/g/files/pydnoa276/files/Dummie_Nesquik.jpg" class="imagen-producto" >
-                      <p class="card-text precio">S/.120.00</p>
-                      <button type="button" class="registrar btn  d-flex mx-auto mb-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Agregar a Carrito</button>
-                      <button type="button" class="registrar btn  d-flex mx-auto" (click)="ver()" (click)="ver()">Ver más</button>
-                    </div>
-                  </div>
-            </div>
-            <div class="producto">
-                <div class="card">
-                    <div class="card-header">
-                     <h3 class="titulo-producto">Fruta de temporada </h3> 
-                    </div>
-                    <div class="card-body">
-                        <img src="https://www.nestle.com.pe/sites/g/files/pydnoa276/files/Dummie_Nesquik.jpg" class="imagen-producto" >
-                      <p class="card-text precio">S/.120.00</p>
-                      <button type="button" class="registrar btn  d-flex mx-auto mb-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Agregar a Carrito</button>
-                      <button type="button" class="registrar btn  d-flex mx-auto" (click)="ver()" (click)="ver()">Ver más</button>
-                    </div>
-                  </div>
-            </div>
-            <div class="producto">
-                <div class="card">
-                    <div class="card-header">
-                     <h3 class="titulo-producto">Fruta de temporada </h3> 
-                    </div>
-                    <div class="card-body">
-                        <img src="https://www.nestle.com.pe/sites/g/files/pydnoa276/files/Dummie_Nesquik.jpg" class="imagen-producto" >
-                      <p class="card-text precio">S/.120.00</p>
-                      <button type="button" class="registrar btn  d-flex mx-auto mb-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Agregar a Carrito</button>
-                      <button type="button" class="registrar btn  d-flex mx-auto" (click)="ver()" (click)="ver()">Ver más</button>
-                    </div>
-                  </div>
-            </div>
-            <div class="producto">
-                <div class="card">
-                    <div class="card-header">
-                     <h3 class="titulo-producto">Fruta de temporada </h3> 
-                    </div>
-                    <div class="card-body">
-                        <img src="https://www.nestle.com.pe/sites/g/files/pydnoa276/files/Dummie_Nesquik.jpg" class="imagen-producto" >
-                      <p class="card-text precio">S/.120.00</p>
-                      <button type="button" class="registrar btn  d-flex mx-auto mb-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Agregar a Carrito</button>
-                      <button type="button" class="registrar btn  d-flex mx-auto" (click)="ver()" (click)="ver()">Ver más</button>
-                    </div>
-                  </div>
-            </div>
-            <div class="producto">
-                <div class="card">
-                    <div class="card-header">
-                     <h3 class="titulo-producto">Fruta de temporada </h3> 
-                    </div>
-                    <div class="card-body">
-                        <img src="https://www.nestle.com.pe/sites/g/files/pydnoa276/files/Dummie_Nesquik.jpg" class="imagen-producto" >
-                      <p class="card-text precio">S/.120.00</p>
-                      <button type="button" class="registrar btn  d-flex mx-auto mb-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Agregar a Carrito</button>
-                      <button type="button" class="registrar btn  d-flex mx-auto" (click)="ver()" (click)="ver()">Ver más</button>
-                    </div>
-                  </div>
-            </div>
-            <div class="producto">
-                <div class="card">
-                    <div class="card-header">
-                     <h3 class="titulo-producto">Fruta de temporada </h3> 
-                    </div>
-                    <div class="card-body">
-                        <img src="https://www.nestle.com.pe/sites/g/files/pydnoa276/files/Dummie_Nesquik.jpg" class="imagen-producto" >
-                      <p class="card-text precio">S/.120.00</p>
-                      <button type="button" class="registrar btn  d-flex mx-auto mb-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Agregar a Carrito</button>
-                      <button type="button" class="registrar btn  d-flex mx-auto" (click)="ver()" (click)="ver()">Ver más</button>
-                    </div>
-                  </div>
-            </div>
-            <div class="producto">
-                <div class="card">
-                    <div class="card-header">
-                     <h3 class="titulo-producto">Fruta de temporada </h3> 
-                    </div>
-                    <div class="card-body">
-                        <img src="https://www.nestle.com.pe/sites/g/files/pydnoa276/files/Dummie_Nesquik.jpg" class="imagen-producto" >
-                      <p class="card-text precio">S/.120.00</p>
-                      <button type="button" class="registrar btn  d-flex mx-auto mb-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Agregar a Carrito</button>
-                      <button type="button" class="registrar btn  d-flex mx-auto" (click)="ver()" (click)="ver()">Ver más</button>
-                    </div>
-                  </div>
-            </div>
-            <div class="producto">
-                <div class="card">
-                    <div class="card-header">
-                     <h3 class="titulo-producto">Fruta de temporada </h3> 
-                    </div>
-                    <div class="card-body">
-                        <img src="https://www.nestle.com.pe/sites/g/files/pydnoa276/files/Dummie_Nesquik.jpg" class="imagen-producto" >
-                      <p class="card-text precio">S/.120.00</p>
-                      <button type="button" class="registrar btn  d-flex mx-auto mb-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Agregar a Carrito</button>
-                      <button type="button" class="registrar btn  d-flex mx-auto" (click)="ver()" (click)="ver()">Ver más</button>
-                    </div>
-                  </div>
-            </div>
-            <div class="producto">
-                <div class="card">
-                    <div class="card-header">
-                     <h3 class="titulo-producto">Fruta de temporada </h3> 
-                    </div>
-                    <div class="card-body">
-                        <img src="https://www.nestle.com.pe/sites/g/files/pydnoa276/files/Dummie_Nesquik.jpg" class="imagen-producto" >
-                      <p class="card-text precio">S/.120.00</p>
-                      <button type="button" class="registrar btn  d-flex mx-auto mb-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Agregar a Carrito</button>
-                      <button type="button" class="registrar btn  d-flex mx-auto" (click)="ver()" (click)="ver()">Ver más</button>
-                    </div>
-                  </div>
-            </div>
-            <div class="producto">
-                <div class="card">
-                    <div class="card-header">
-                     <h3 class="titulo-producto">Fruta de temporada </h3> 
-                    </div>
-                    <div class="card-body">
-                        <img src="https://www.nestle.com.pe/sites/g/files/pydnoa276/files/Dummie_Nesquik.jpg" class="imagen-producto" >
-                      <p class="card-text precio">S/.120.00</p>
-                      <button type="button" class="registrar btn  d-flex mx-auto mb-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Agregar a Carrito</button>
-                      <button type="button" class="registrar btn  d-flex mx-auto" (click)="ver()" (click)="ver()">Ver más</button>
-                    </div>
-                  </div>
-            </div>
-            <div class="producto">
-                <div class="card">
-                    <div class="card-header">
-                     <h3 class="titulo-producto">Fruta de temporada </h3> 
-                    </div>
-                    <div class="card-body">
-                        <img src="https://www.nestle.com.pe/sites/g/files/pydnoa276/files/Dummie_Nesquik.jpg" class="imagen-producto" >
-                      <p class="card-text precio">S/.120.00</p>
-                      <button type="button" class="registrar btn  d-flex mx-auto mb-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Agregar a Carrito</button>
-                      <button type="button" class="registrar btn  d-flex mx-auto" (click)="ver()" (click)="ver()">Ver más</button>
-                    </div>
-                  </div>
-            </div>
-            <div class="producto">
-                <div class="card">
-                    <div class="card-header">
-                     <h3 class="titulo-producto">Fruta de temporada </h3> 
-                    </div>
-                    <div class="card-body">
-                        <img src="https://www.nestle.com.pe/sites/g/files/pydnoa276/files/Dummie_Nesquik.jpg" class="imagen-producto" >
-                      <p class="card-text precio">S/.120.00</p>
+                        <img src={{i.imagenControl}} class="imagen-producto" >
+                      <p class="card-text precio">S/.{{i.costoControl}}.00</p>
                       <button type="button" class="registrar btn  d-flex mx-auto mb-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Agregar a Carrito</button>
                       <button type="button" class="registrar btn  d-flex mx-auto" (click)="ver()" (click)="ver()">Ver más</button>
                     </div>
@@ -182,12 +39,6 @@
               </div>
             </div>
 
-
-
         </div>
-
-
     </div>
-
-
 </div>
